--- a/ReQLAssignment/pom.xml
+++ b/ReQLAssignment/pom.xml
@@ -25,6 +25,11 @@
             <artifactId>junit-jupiter-api</artifactId>
             <version>5.6.2</version>
         </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.10.0.pr2</version>
+        </dependency>
     </dependencies>
 
 </project>
